--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <h1>GUSTAVO HENRIQUE SANTOS BRAGA</h1>
         <p class="contact">
-            📞 (73) 98806-3372 | 📍 São Caetano, Itabuna - Bahia<br>
-            ✉️ <a href="mailto:guguhenrique0987@gmail.com">guguhenrique0987@gmail.com</a>
+             Tel: (73) 98806-3372 | Github: Henritrad | LinkedIn: Gustavo Henrique<br>
+             <a href="mailto:guguhenrique0987@gmail.com">guguhenrique0987@gmail.com</a>
         </p>
     </header>
 
